# agent-rs

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  PLANS.md  agent.example.toml  test_input.docx  test_input.expanded.md
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: execplan_review.py  post_tool_use_review.py  pre_tool_use_policy.py  stop_continue.py  user_prompt_submit_policy.py
.codex/rules/: commands.md  default.rules
.gemini/: settings.json
.githooks/: pre-commit
.harness/: README.md  instructions.md  policy.toml  sync.py  task.md
.harness/hooks/: command_policy.py  common.py  decision_log.py  hook_types.py  path_policy.py  policy_hook.py  policy_io.py  post_tool.py  pre_tool.py  stop.py  stop_hook.py
.harness/templates/: commands.md.tmpl  instruction.md.tmpl
.harness/tests/: test_harness.py
apps/docx-cli/: Cargo.toml
apps/docx-cli/src/: main.rs
crates/agent-adapters/: Cargo.toml
crates/agent-adapters/src/: config.rs  fetch.rs  lib.rs  llm.rs  search.rs  stages.rs  storage.rs
crates/agent-app/: Cargo.toml
crates/agent-app/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: config.rs  lib.rs
crates/agent-error/: Cargo.toml
crates/agent-error/src/: lib.rs
crates/agent-kernel/: Cargo.toml
crates/agent-kernel/src/: agent.rs  artifact.rs  error.rs  lib.rs  options.rs  source.rs  telemetry.rs  traits.rs  typemap.rs
crates/agent-rig/: Cargo.toml
crates/agent-rig/src/: lib.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: inspector.rs  lib.rs  orchestrator.rs  retry.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/docx-agent/: Cargo.toml
crates/docx-agent/src/: application.rs  config.rs  domain.rs  error.rs  fetch.rs  generation.rs  infrastructure.rs  lib.rs  parser.rs  prompt.rs  search.rs  service.rs
crates/docx-agent/src/infrastructure/: cache.rs  docx.rs  fetch.rs  llm.rs  search.rs
crates/docx-agent/src/steps/: evaluation.rs  generation.rs  mod.rs  refinement.rs  research.rs
crates/docx-domain/: Cargo.toml
crates/docx-domain/src/: lib.rs  model.rs  parser.rs  prompts.rs  workflow.rs
crates/docx-domain/src/agents/: mod.rs  reviewer.rs  writer.rs
crates/evaluator-agent/: Cargo.toml
crates/evaluator-agent/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
doc/: README.md  agentic-patterns.md  architecture.md  getting-started.md  observability.md  resilience.md
docs/codex/: CHANGELOG.md  EXECUTION_POLICY.md  README.md
docs/exec-plans/active/: 2026-04-09-codex-harness-bootstrap.md  2026-04-09-docx-agent-v1.md  2026-04-09-execplan-cleanup.md  2026-04-09-extract-harness-resources.md  2026-04-09-gemini-cli-compatibility.md  TEMPLATE.md
docs/exec-plans/completed/: README.md
docs/harness/: CHANGELOG.md  EXECUTION_POLICY.md  GIT_GATES.md  LOCAL_RUNTIME.md  README.md
hooks/: execplan_review.py  post_tool_use_review.py  pre_tool_use_policy.py  stop_continue.py  user_prompt_submit_policy.py
