[workspace]
members = [
    "apps/docx-cli",
    "crates/agent-core",
    "crates/docx-agent",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rig = { package = "rig-core", version = "0.32" }
roxmltree = "0.20"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
