[workspace]
members = [
    "apps/docx-cli",
    "crates/agent-app",
    "crates/agent-kernel",
    "crates/agent-runtime",
    "crates/docx-domain",
    "crates/agent-adapters", "crates/agent-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rig = { package = "rig-core", version = "0.32" }
roxmltree = "0.20"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
