[package]
name = "docx-cli"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
agent-core = { path = "../../crates/agent-core" }
docx-agent = { path = "../../crates/docx-agent" }
evaluator-agent = { path = "../../crates/evaluator-agent" }
orchestrator = { path = "../../crates/orchestrator" }
reqwest.workspace = true
rig.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
