[package]
name = "docx-cli"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
agent-adapters = { path = "../../crates/agent-adapters" }
agent-kernel = { path = "../../crates/agent-kernel" }
agent-runtime = { path = "../../crates/agent-runtime" }
docx-domain = { path = "../../crates/docx-domain" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
