[package]
name = "docx-cli"
version.workspace = true
edition.workspace = true


[dependencies]
agent-error.workspace = true
anyhow.workspace = true
clap.workspace = true
agent-app = { path = "../../crates/agent-app" }
docx-domain = { path = "../../crates/docx-domain" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
