[package]
name = "agent-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
agent-kernel = { path = "../agent-kernel" }
agent-rig = { path = "../agent-rig" }
reqwest.workspace = true
rig.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
filetime.workspace = true

[lints]
workspace = true
