[package]
name = "agent-app"
version.workspace = true
edition.workspace = true

[dependencies]
agent-error.workspace = true
agent-adapters = { path = "../agent-adapters" }
agent-kernel = { path = "../agent-kernel" }
agent-runtime = { path = "../agent-runtime" }
docx-domain = { path = "../docx-domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
