[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true

[dependencies]
agent-kernel = { path = "../agent-kernel" }
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[lints]
workspace = true
