[package]
name = "docx-agent"
version.workspace = true
edition.workspace = true


[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
reqwest.workspace = true
rig.workspace = true
roxmltree.workspace = true
schemars.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
zip.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
