[package]
name = "docx-agent"
version.workspace = true
edition.workspace = true


[dependencies]
agent-core = { path = "../agent-core" }
reqwest.workspace = true
rig.workspace = true
roxmltree.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zip.workspace = true

[lints]
workspace = true
