[package]
name = "docx-agent"
version.workspace = true
edition.workspace = true


[dependencies]
agent-core = { path = "../agent-core" }
hex.workspace = true
reqwest.workspace = true
rig.workspace = true
roxmltree.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zip.workspace = true

[lints]
workspace = true
