[package]
name = "docx-domain"
version.workspace = true
edition.workspace = true

[dependencies]
agent-kernel = { path = "../agent-kernel" }
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[lints]
workspace = true
