[package]
name = "docx-domain"
version.workspace = true
edition.workspace = true

[dependencies]
agent-error.workspace = true
agent-kernel = { path = "../agent-kernel" }
agent-rig = { path = "../agent-rig" }
agent-runtime = { path = "../agent-runtime" }
agent-tools = { path = "../agent-tools" }
reqwest.workspace = true
rig.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[lints]
workspace = true
